--- a/luminaria/package.json
+++ b/luminaria/package.json
@@ -7,7 +7,11 @@
     "gulp-sass": "^1.3.3",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0"
+    "gulp-rename": "^1.2.0",
+    "http-server": "^0.9.0"
+  },
+  "scripts": {
+    "serve": "http-server www"
   },
   "devDependencies": {
     "bower": "^1.3.3",
